--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 settings:
   title: 'Status Page'
-  url: 'https://status-page.eidam.dev' # used for Slack messages
+  url: 'https://status.mayfield.workers.dev' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
@@ -15,25 +15,22 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
-    method: GET # default=GET
-    expectStatus: 200 # operational status, default=200
-    followRedirect: false # should fetch follow redirects, default=false
-    linkable: false # allows the title to be a link, default=true
-
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
-    description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
-    method: GET
-    expectStatus: 200
-    linkable: true # allows the title to be a link, default=true
-
   - id: ruthsgleanings-com
-    name: "Ruth's Gleanings"
+    name: ruthsgleanings.com
     url: 'https://ruthsgleanings.com/'
-    method: GET
-    expectStatus: 200
+
+  - id: cwview-com
+    name: cwview.com
+    url: 'https://cwview.com'
+
+  - id: cloud-screenconnect-com
+    name: cloud.screenconnect.com
+    url: 'https://cloud.screenconnect.com'
+
+  - id: wofford-ecs-org
+    name: wofford-ecs.org
+    url: 'https://wofford-ecs.org'
+
+  - id: ics-wofford-ecs-org
+    name: ics.wofford-ecs.org
+    url: 'https://ics.wofford-ecs.org'
